--- a/influence_K.ipynb
+++ b/influence_K.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "065f95ac",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
     "from src.algorithms.unrolling_policy_iteration import UnrollingPolicyIterationTrain\n",
     "from src.environments import CliffWalkingEnv\n",
     "from src.algorithms.generalized_policy_iteration import PolicyIterationTrain\n",
-    "from src.utils import get_optimal_q, test_pol_err, plot_errors\n",
+    "from src.utils import get_optimal_q, test_pol_err, plot_errors, save_error_matrix_to_csv\n",
     "\n",
     "SAVE = False\n",
     "PATH = \"results/filter_order/\""
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cc7ac370",
    "metadata": {},
    "outputs": [],
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "6ddd0059",
    "metadata": {},
    "outputs": [],
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "2c82abf8",
    "metadata": {},
    "outputs": [
@@ -732,6 +732,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to csv file: results/filter_order/K_5_10_unr_all_data_med_err.csv\n",
+      "Data saved to csv file: results/filter_order/K_5_10_unr_all_data_prctile25.csv\n",
+      "Data saved to csv file: results/filter_order/K_5_10_unr_all_data_prctile75.csv\n"
+     ]
     }
    ],
    "source": [
@@ -739,7 +748,15 @@
     "xlabel = \"K\"\n",
     "plot_errors(errs1, Ks, Exps, xlabel, \"Q err\", skip_idx=skip_idx, agg=\"median\", deviation='prctile')\n",
     "plot_errors(errs2, Ks, Exps, xlabel, \"Q err 2\", skip_idx=skip_idx, agg=\"median\", deviation='prctile')\n",
-    "plot_errors(bell_errs, Ks, Exps, xlabel, \"Bellman err\", skip_idx=skip_idx, agg=\"median\", deviation='prctile')"
+    "plot_errors(bell_errs, Ks, Exps, xlabel, \"Bellman err\", skip_idx=skip_idx, agg=\"median\", deviation='prctile')\n",
+    "\n",
+    "if SAVE:\n",
+    "    file_name = PATH + \"K_5_10_unr_all_data_med_err.csv\"\n",
+    "    save_error_matrix_to_csv(np.median(errs2, axis=0), Exps, file_name)\n",
+    "    file_name = PATH + \"K_5_10_unr_all_data_prctile25.csv\"\n",
+    "    save_error_matrix_to_csv(np.percentile(errs2, 25, axis=0), Exps, file_name)\n",
+    "    file_name = PATH + \"K_5_10_unr_all_data_prctile75.csv\"\n",
+    "    save_error_matrix_to_csv(np.percentile(errs2, 75, axis=0), Exps, file_name)"
    ]
   },
   {
@@ -752,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "fe7ac32f",
    "metadata": {},
    "outputs": [
@@ -765,6 +782,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to csv file: results/filter_order/K_pol_vs_ws_all_data_med_err.csv\n",
+      "Data saved to csv file: results/filter_order/K_pol_vs_ws_unr_all_data_prctile25.csv\n",
+      "Data saved to csv file: results/filter_order/K_pol_vs_ws_all_data_prctile75.csv\n"
+     ]
     }
    ],
    "source": [
@@ -772,7 +798,15 @@
     "xlabel = \"K\"\n",
     "# plot_errors(errs1, Ks, Exps, xlabel, \"Q err\", skip_idx=skip_idx, agg=\"median\", deviation='prctile')\n",
     "plot_errors(errs2, Ks, Exps, xlabel, \"Q err 2\", skip_idx=skip_idx, agg=\"median\", deviation='prctile')\n",
-    "# plot_errors(bell_errs, Ks, Exps, xlabel, \"Bellman err\", skip_idx=skip_idx, agg=\"median\", deviation='prctile')"
+    "# plot_errors(bell_errs, Ks, Exps, xlabel, \"Bellman err\", skip_idx=skip_idx, agg=\"median\", deviation='prctile')\n",
+    "\n",
+    "if SAVE:\n",
+    "    file_name = PATH + \"K_pol_vs_ws_all_data_med_err.csv\"\n",
+    "    save_error_matrix_to_csv(np.median(errs2, axis=0), Exps, file_name)\n",
+    "    file_name = PATH + \"K_pol_vs_ws_unr_all_data_prctile25.csv\"\n",
+    "    save_error_matrix_to_csv(np.percentile(errs2, 25, axis=0), Exps, file_name)\n",
+    "    file_name = PATH + \"K_pol_vs_ws_all_data_prctile75.csv\"\n",
+    "    save_error_matrix_to_csv(np.percentile(errs2, 75, axis=0), Exps, file_name)"
    ]
   },
   {
